--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "deploy": "vue-cli-service build && firebase deploy",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "terser": "^3.14.1",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1"
   },
